--- a/css/style1.css
+++ b/css/style1.css
@@ -37,8 +37,14 @@ body{
 }
 
 .list-items a{
+    padding: 15px;
     text-decoration: none;
     color: rgb(255,255,255);
+}
+
+.list-items a:hover{
+    background-color: yellow;
+    color: black;
 }
 
 .content{
